add generic ics43434

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,11 @@ set(COMPONENT_PRIV_REQUIRES audio_sal audio_hal esp_dispatcher esp_peripherals d
 
 if(CONFIG_AUDIO_BOARD_CUSTOM)
 message(STATUS "Current board name is ESP32-S3-DevKit")
-list(APPEND COMPONENT_ADD_INCLUDEDIRS ./esp32_s3_devkit)
+list(APPEND COMPONENT_ADD_INCLUDEDIRS ./esp32_s3_devkit ./ics43434)
 set(COMPONENT_SRCS
 ./esp32_s3_devkit/board.c
 ./esp32_s3_devkit/board_pins_config.c
+./ics43434/ics43434.c
 )
 endif()
 
